--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mock-app",
+  "homepage": "https://vickyrockingster.github.io/mock-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,6 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
-    "swr": "^2.2.5",
     "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +24,9 @@
     "start": "PORT=5001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
